--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
-    "ts-node": "^9.0.0"
+    "ts-node-dev": "^1.0.0"
   }
 }
