Updating the client app, updating skaffold and k8s deployment and services for auth mongodb and client

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -6,7 +6,7 @@ deploy:
       - ./infra/k8s/*
 build:
   local:
-    push: false # do not push to docker hub
+    push: false
   artifacts:
     - image: chandanky23/auth
       context: auth
