--- a/auth/package.json
+++ b/auth/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ckytickets/common": "^1.0.2",
     "@types/cookie-session": "^2.0.41",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
