--- a/tickets/package.json
+++ b/tickets/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
+    "node-nats-streaming": "^0.3.2",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
